tests/snapshots/snapshots__budget_debug_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (2015 tokens)

README.md
     1→# debug
     7→A tiny JavaScript debugging utility modelled after Node.js core's debugging
     8→technique. Works in Node.js and web browsers.
     9→
    10→## Installation
    16→## Usage
    73→#### Windows command prompt notes
    75→##### CMD
    77→On Windows the environment variable is set using the `set` command.
    78→
    79→```cmd
    80→set DEBUG=*,-not_this
    81→```
    82→
    83→Example:
    84→
    85→```cmd
    86→set DEBUG=* & node app.js
    87→```
    88→
    89→##### PowerShell (VS Code default)
    91→PowerShell uses different syntax to set environment variables.
    92→
    93→```cmd
    94→$env:DEBUG = "*,-not_this"
    95→```
    96→
    97→Example:
    98→
    99→```cmd
   100→$env:DEBUG='app';node app.js
   101→```
   102→
   103→Then, run the program to be debugged as usual.
   104→
   105→npm script example:
   106→```js
   107→  "windowsDebug": "@powershell -Command $env:DEBUG='*';node app.js",
   108→```
   109→
   110→## Namespace Colors
   116→#### Node.js
   118→In Node.js, colors are enabled when stderr is a TTY. You also _should_ install
   119→the [`supports-color`](https://npmjs.org/supports-color) module alongside debug,
   120→otherwise debug will only use a small handful of basic colors.
   121→
   122→<img width="521" src="https://user-images.githubusercontent.com/71256/29092181-47f6a9e6-7c3a-11e7-9a14-1928d8a711cd.png">
   123→
   124→#### Web Browser
   126→Colors are also enabled on "Web Inspectors" that understand the `%c` formatting
   127→option. These are WebKit web inspectors, Firefox ([since version
   128→31](https://hacks.mozilla.org/2014/05/editable-box-model-multiple-selection-sublime-text-keys-much-more-firefox-developer-tools-episode-31/))
   129→and the Firebug plugin for Firefox (any version).
   130→
   131→<img width="524" src="https://user-images.githubusercontent.com/71256/29092033-b65f9f2e-7c39-11e7-8e32-f6f0d8e865c1.png">
   132→
   133→
   134→## Millisecond diff
   145→## Conventions
   149→## Wildcards
   161→## Environment Variables
   181→## Formatters
   196→### Custom formatters
   198→You can add custom formatters by extending the `debug.formatters` object.
   199→For example, if you wanted to add support for rendering a Buffer as hex with
   200→`%h`, you could do something like:
   201→
   202→```js
   203→const createDebug = require('debug')
   204→createDebug.formatters.h = (v) => {
   205→  return v.toString('hex')
   206→}
   207→
   208→// …elsewhere
   209→const debug = createDebug('foo')
   210→debug('this is hex: %h', new Buffer('hello world'))
   211→//   foo this is hex: 68656c6c6f20776f726c6421 +0ms
   212→```
   213→
   214→
   215→## Browser Support
   248→## Output streams
   274→## Extend
   288→## Set dynamically
   341→## Checking whether a debug target is enabled
   357→## Usage in child processes
   379→## Authors
   386→## Backers
   422→## Sponsors
   457→## License

package.json
     2→  "name": "debug",
     3→  "version": "4.4.3",
     4→  "repository": {
     7→  },
     8→  "description": "Lightweight debugging utility for Node.js and the browser",
     9→  "keywords": [
    13→  ],
    14→  "files": [
    18→  ],
    19→  "author": "Josh Junon (https://github.com/qix-)",
    20→  "contributors": [
    24→  ],
    25→  "license": "MIT",
    26→  "scripts": {
    32→  },
    33→  "dependencies": {
    35→  },
    36→  "devDependencies": {
    48→  },
    49→  "peerDependenciesMeta": {
    53→  },
    54→  "main": "./src/index.js",
    55→  "browser": "./src/browser.js",
    56→  "engines": {
    58→  },
    59→  "xo": {
    63→  }
    64→}

src/browser.js
   115→function useColors() {
   116→	// NB: In an Electron preload script, document will be defined but not fully
   117→	// initialized. Since we know we're in Chrome, we'll just detect this case
   118→	// explicitly
      →	…
   144→ * Colorize log arguments if enabled.
   145→ *
   146→ * @api public
   149→function formatArgs(args) {
   150→	args[0] = (this.useColors ? '%c' : '') +
      →	…
   195→ * Save `namespaces`.
   196→ *
   197→ * @param {String} namespaces
   198→ * @api private
   200→function save(namespaces) {
   201→	try {
      →	…
   214→ * Load `namespaces`.
   215→ *
   216→ * @return {String} returns the previously persisted debug modes
   217→ * @api private
   219→function load() {
   220→	let r;
      →	…
   237→ * Localstorage attempts to return the localstorage.
   238→ *
   239→ * This is necessary because safari throws
   240→ * when a user disables cookies/localstorage
   241→ * and you attempt to access it.
   242→ *
   243→ * @return {LocalStorage}
   244→ * @api private
   247→function localstorage() {
   248→	try {
      →	…

src/common.js
     3→ * This is the common logic for both the Node.js and web browser
     4→ * implementations of `debug()`.
     7→function setup(env) {
     8→	createDebug.debug = createDebug;
     9→	createDebug.default = createDebug;
    10→	createDebug.coerce = coerce;
    11→	createDebug.disable = disable;
    12→	createDebug.enable = enable;
    13→	createDebug.enabled = enabled;
    14→	createDebug.humanize = require('ms');
    15→	createDebug.destroy = destroy;
    16→
      →…

src/node.js
   152→ * Is stdout a TTY? Colored output is enabled when `true`.
   155→function useColors() {
   162→ * Adds ANSI color escape codes if enabled.
   163→ *
      → …
   167→function formatArgs(args) {
   182→function getDate() {
   183→	if (exports.inspectOpts.hideDate) {
   184→		return '';
   185→	}
   186→	return new Date().toISOString() + ' ';
   187→}
   190→ * Invokes `util.formatWithOptions()` with the specified arguments and writes to stderr.
   193→function log(...args) {
   198→ * Save `namespaces`.
   199→ *
      → …
   203→function save(namespaces) {
   214→ * Load `namespaces`.
   215→ *
      → …
   220→function load() {
   225→ * Init logic for `debug` instances.
   226→ *
      → …
   231→function init(debug) {

test.node.js
     8→const formatWithOptionsSpy = sinon.spy(util, 'formatWithOptions');
