tests/snapshots/snapshots__budget_debug_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4062 tokens)

README.md
     1→# debug
     7→A tiny JavaScript debugging utility modelled after Node.js core's debugging
     8→technique. Works in Node.js and web browsers.
     9→
    10→## Installation
    12→```bash
    13→$ npm install debug
    14→```
    15→
    16→## Usage
    18→`debug` exposes a function; simply pass this function the name of your module, and it will return a decorated version of `console.error` for you to pass debug statements to. This will allow you to toggle the debug output for different parts of your module as well as the module as a whole.
    19→
    20→Example [_app.js_](./examples/node/app.js):
    21→
      →…
    73→#### Windows command prompt notes
    75→##### CMD
    77→On Windows the environment variable is set using the `set` command.
    78→
    79→```cmd
    80→set DEBUG=*,-not_this
    81→```
    82→
    83→Example:
    84→
    85→```cmd
    86→set DEBUG=* & node app.js
    87→```
    88→
    89→##### PowerShell (VS Code default)
    91→PowerShell uses different syntax to set environment variables.
    92→
    93→```cmd
    94→$env:DEBUG = "*,-not_this"
    95→```
    96→
    97→Example:
    98→
    99→```cmd
   100→$env:DEBUG='app';node app.js
   101→```
   102→
   103→Then, run the program to be debugged as usual.
   104→
   105→npm script example:
   106→```js
   107→  "windowsDebug": "@powershell -Command $env:DEBUG='*';node app.js",
   108→```
   109→
   110→## Namespace Colors
   112→Every debug instance has a color generated for it based on its namespace name.
   113→This helps when visually parsing the debug output to identify which debug instance
   114→a debug line belongs to.
   115→
   116→#### Node.js
   118→In Node.js, colors are enabled when stderr is a TTY. You also _should_ install
   119→the [`supports-color`](https://npmjs.org/supports-color) module alongside debug,
   120→otherwise debug will only use a small handful of basic colors.
   121→
   122→<img width="521" src="https://user-images.githubusercontent.com/71256/29092181-47f6a9e6-7c3a-11e7-9a14-1928d8a711cd.png">
   123→
   124→#### Web Browser
   126→Colors are also enabled on "Web Inspectors" that understand the `%c` formatting
   127→option. These are WebKit web inspectors, Firefox ([since version
   128→31](https://hacks.mozilla.org/2014/05/editable-box-model-multiple-selection-sublime-text-keys-much-more-firefox-developer-tools-episode-31/))
   129→and the Firebug plugin for Firefox (any version).
   130→
   131→<img width="524" src="https://user-images.githubusercontent.com/71256/29092033-b65f9f2e-7c39-11e7-8e32-f6f0d8e865c1.png">
   132→
   133→
   134→## Millisecond diff
   136→When actively developing an application it can be useful to see when the time spent between one `debug()` call and the next. Suppose for example you invoke `debug()` before requesting a resource, and after as well, the "+NNNms" will show you how much time was spent between calls.
   137→
   138→<img width="647" src="https://user-images.githubusercontent.com/71256/29091486-fa38524c-7c37-11e7-895f-e7ec8e1039b6.png">
   139→
      →…
   145→## Conventions
   147→If you're using this in one or more of your libraries, you _should_ use the name of your library so that developers may toggle debugging as desired without guessing names. If you have more than one debuggers you _should_ prefix them with your library name and use ":" to separate features. For example "bodyParser" from Connect would then be "connect:bodyParser".  If you append a "*" to the end of your name, it will always be enabled regardless of the setting of the DEBUG environment variable.  You can then use it for normal output as well as debug output.
   148→
   149→## Wildcards
   151→The `*` character may be used as a wildcard. Suppose for example your library has
   152→debuggers named "connect:bodyParser", "connect:compress", "connect:session",
   153→instead of listing all three with
   154→`DEBUG=connect:bodyParser,connect:compress,connect:session`, you may simply do
      →…
   161→## Environment Variables
   163→When running through Node.js, you can set a few environment variables that will
   164→change the behavior of the debug logging:
   165→
   166→| Name      | Purpose                                         |
      →…
   181→## Formatters
   183→Debug uses [printf-style](https://wikipedia.org/wiki/Printf_format_string) formatting.
   184→Below are the officially supported formatters:
   185→
   186→| Formatter | Representation |
      →…
   196→### Custom formatters
   198→You can add custom formatters by extending the `debug.formatters` object.
   199→For example, if you wanted to add support for rendering a Buffer as hex with
   200→`%h`, you could do something like:
   201→
   202→```js
   203→const createDebug = require('debug')
   204→createDebug.formatters.h = (v) => {
   205→  return v.toString('hex')
   206→}
   207→
   208→// …elsewhere
   209→const debug = createDebug('foo')
   210→debug('this is hex: %h', new Buffer('hello world'))
   211→//   foo this is hex: 68656c6c6f20776f726c6421 +0ms
   212→```
   213→
   214→
   215→## Browser Support
   217→You can build a browser-ready script using [browserify](https://github.com/substack/node-browserify),
   218→or just use the [browserify-as-a-service](https://wzrd.in/) [build](https://wzrd.in/standalone/debug@latest),
   219→if you don't want to build it yourself.
   220→
      →…
   248→## Output streams
   250→  By default `debug` will log to stderr, however this can be configured per-namespace by overriding the `log` method:
   251→
   252→Example [_stdout.js_](./examples/node/stdout.js):
   253→
      →…
   274→## Extend
   275→You can simply extend debugger 
   276→```js
   277→const log = require('debug')('auth');
   278→
      →…
   288→## Set dynamically
   290→You can also enable debug dynamically by calling the `enable()` method :
   291→
   292→```js
   293→let debug = require('debug');
      →…
   341→## Checking whether a debug target is enabled
   343→After you've created a debug instance, you can determine whether or not it is
   344→enabled by checking the `enabled` property:
   345→
   346→```javascript
      →…
   357→## Usage in child processes
   359→Due to the way `debug` detects if the output is a TTY or not, colors are not shown in child processes when `stderr` is piped. A solution is to pass the `DEBUG_COLORS=1` environment variable to the child process.  
   360→For example:
   361→
   362→```javascript
      →…
   379→## Authors
   381→ - TJ Holowaychuk
   382→ - Nathan Rajlich
   383→ - Andrew Rhyne
   384→ - Josh Junon
      → …
   386→## Backers
   388→Support us with a monthly donation and help us continue our activities. [[Become a backer](https://opencollective.com/debug#backer)]
   389→
   390→<a href="https://opencollective.com/debug/backer/0/website" target="_blank"><img src="https://opencollective.com/debug/backer/0/avatar.svg"></a>
   391→<a href="https://opencollective.com/debug/backer/1/website" target="_blank"><img src="https://opencollective.com/debug/backer/1/avatar.svg"></a>
      →…
   422→## Sponsors
   424→Become a sponsor and get your logo on our README on Github with a link to your site. [[Become a sponsor](https://opencollective.com/debug#sponsor)]
   425→
   426→<a href="https://opencollective.com/debug/sponsor/0/website" target="_blank"><img src="https://opencollective.com/debug/sponsor/0/avatar.svg"></a>
   427→<a href="https://opencollective.com/debug/sponsor/1/website" target="_blank"><img src="https://opencollective.com/debug/sponsor/1/avatar.svg"></a>
      →…
   457→## License
   459→(The MIT License)
   460→
   461→Copyright (c) 2014-2017 TJ Holowaychuk &lt;tj@vision-media.ca&gt;
   462→Copyright (c) 2018-2021 Josh Junon
      →…

package.json
     2→  "name": "debug",
     3→  "version": "4.4.3",
     4→  "repository": {
     7→  },
     8→  "description": "Lightweight debugging utility for Node.js and the browser",
     9→  "keywords": [
    13→  ],
    14→  "files": [
    18→  ],
    19→  "author": "Josh Junon (https://github.com/qix-)",
    20→  "contributors": [
    24→  ],
    25→  "license": "MIT",
    26→  "scripts": {
    32→  },
    33→  "dependencies": {
    35→  },
    36→  "devDependencies": {
    48→  },
    49→  "peerDependenciesMeta": {
    53→  },
    54→  "main": "./src/index.js",
    55→  "browser": "./src/browser.js",
    56→  "engines": {
    58→  },
    59→  "xo": {
    63→  }
    64→}

src/browser.js
   115→function useColors() {
   116→	// NB: In an Electron preload script, document will be defined but not fully
   117→	// initialized. Since we know we're in Chrome, we'll just detect this case
   118→	// explicitly
   119→	if (typeof window !== 'undefined' && window.process && (window.process.type === 'renderer' || window.process.__nwjs)) {
   120→		return true;
   121→	}
   122→
   123→	// Internet Explorer and Edge do not support colors.
   124→	if (typeof navigator !== 'undefined' && navigator.userAgent && navigator.userAgent.toLowerCase().match(/(edge|trident)\/(\d+)/)) {
   125→		return false;
   126→	}
   127→
   128→	let m;
   129→
   130→	// Is webkit? http://stackoverflow.com/a/16459606/376773
   131→	// document is undefined in react-native: https://github.com/facebook/react-native/pull/1632
      →	…
   143→/**
   144→ * Colorize log arguments if enabled.
   145→ *
   146→ * @api public
   147→ */
   148→
   149→function formatArgs(args) {
   150→	args[0] = (this.useColors ? '%c' : '') +
   151→		this.namespace +
   152→		(this.useColors ? ' %c' : ' ') +
      →		…
   194→/**
   195→ * Save `namespaces`.
   196→ *
   197→ * @param {String} namespaces
   198→ * @api private
   199→ */
   200→function save(namespaces) {
   201→	try {
   202→		if (namespaces) {
   203→			exports.storage.setItem('debug', namespaces);
      →			…
   213→/**
   214→ * Load `namespaces`.
   215→ *
   216→ * @return {String} returns the previously persisted debug modes
   217→ * @api private
   218→ */
   219→function load() {
   220→	let r;
   221→	try {
   222→		r = exports.storage.getItem('debug') || exports.storage.getItem('DEBUG') ;
      →		…
   236→/**
   237→ * Localstorage attempts to return the localstorage.
   238→ *
   239→ * This is necessary because safari throws
   240→ * when a user disables cookies/localstorage
   241→ * and you attempt to access it.
   242→ *
   243→ * @return {LocalStorage}
   244→ * @api private
   245→ */
   246→
   247→function localstorage() {
   248→	try {
   249→		// TVMLKit (Apple TV JS Runtime) does not have a window object, just localStorage in the global context
   250→		// The Browser also has localStorage in the global context.
      →		…

src/common.js
     2→/**
     3→ * This is the common logic for both the Node.js and web browser
     4→ * implementations of `debug()`.
     5→ */
     6→
     7→function setup(env) {
     8→	createDebug.debug = createDebug;
     9→	createDebug.default = createDebug;
    10→	createDebug.coerce = coerce;
      →	…

src/node.js
   151→/**
   152→ * Is stdout a TTY? Colored output is enabled when `true`.
   153→ */
   154→
   155→function useColors() {
   156→	return 'colors' in exports.inspectOpts ?
   157→		Boolean(exports.inspectOpts.colors) :
   158→		tty.isatty(process.stderr.fd);
      →		…
   161→/**
   162→ * Adds ANSI color escape codes if enabled.
   163→ *
   164→ * @api public
   165→ */
   166→
   167→function formatArgs(args) {
   168→	const {namespace: name, useColors} = this;
   169→
   170→	if (useColors) {
      →	…
   182→function getDate() {
   183→	if (exports.inspectOpts.hideDate) {
   184→		return '';
   185→	}
   186→	return new Date().toISOString() + ' ';
   187→}
   189→/**
   190→ * Invokes `util.formatWithOptions()` with the specified arguments and writes to stderr.
   191→ */
   192→
   193→function log(...args) {
   194→	return process.stderr.write(util.formatWithOptions(exports.inspectOpts, ...args) + '\n');
   195→}
   197→/**
   198→ * Save `namespaces`.
   199→ *
   200→ * @param {String} namespaces
   201→ * @api private
   202→ */
   203→function save(namespaces) {
   204→	if (namespaces) {
   205→		process.env.DEBUG = namespaces;
   206→	} else {
      →	…
   213→/**
   214→ * Load `namespaces`.
   215→ *
   216→ * @return {String} returns the previously persisted debug modes
   217→ * @api private
   218→ */
   219→
   220→function load() {
   221→	return process.env.DEBUG;
   222→}
   224→/**
   225→ * Init logic for `debug` instances.
   226→ *
   227→ * Create a new `inspectOpts` object in case `useColors` is set
   228→ * differently for a particular `debug` instance.
   229→ */
   230→
   231→function init(debug) {
   232→	debug.inspectOpts = {};
   233→
   234→	const keys = Object.keys(exports.inspectOpts);
      →	…

test.node.js
     8→const formatWithOptionsSpy = sinon.spy(util, 'formatWithOptions');
