tests/snapshots/snapshots__budget_debug_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (499 words)

README.md
     1→# debug
     2→[![OpenCollective](https://opencollective.com/debug/backers/badge.svg)](#backers)
    10→## Installation
    11→
    16→## Usage
    17→
    73→#### Windows command prompt notes
    74→
    75→##### CMD
    76→
    77→On Windows the environment variable is set using the `set` command.
    78→
    79→```cmd
    80→set DEBUG=*,-not_this
    81→```
    82→
    83→Example:
    84→
    85→```cmd
    86→set DEBUG=* & node app.js
    87→```
    88→
    89→##### PowerShell (VS Code default)
    90→
   110→## Namespace Colors
   111→
   116→#### Node.js
   117→
   124→#### Web Browser
   125→
   134→## Millisecond diff
   135→
   145→## Conventions
   146→
   149→## Wildcards
   150→
   161→## Environment Variables
   162→
   181→## Formatters
   182→
   196→### Custom formatters
   197→
   215→## Browser Support
   216→
   248→## Output streams
   249→
   274→## Extend
   275→You can simply extend debugger 
   288→## Set dynamically
   289→
   341→## Checking whether a debug target is enabled
   342→
   357→## Usage in child processes
   358→
   379→## Authors
   380→
   386→## Backers
   387→
   422→## Sponsors
   423→
   457→## License
   458→
src/browser.js
   115→function useColors() {
   116→	// NB: In an Electron preload script, document will be defined but not fully
   117→	// initialized. Since we know we're in Chrome, we'll just detect this case
   118→	// explicitly
   119→	if (typeof window !== 'undefined' && window.process && (window.process.type === 'renderer' || window.process.__nwjs)) {
   120→		return true;
   143→/**
   144→ * Colorize log arguments if enabled.
   145→ *
   146→ * @api public
   147→ */
   148→
   149→function formatArgs(args) {
   194→/**
   195→ * Save `namespaces`.
   196→ *
   197→ * @param {String} namespaces
   198→ * @api private
   199→ */
   200→function save(namespaces) {
   213→/**
   214→ * Load `namespaces`.
   215→ *
   216→ * @return {String} returns the previously persisted debug modes
   217→ * @api private
   218→ */
   219→function load() {
   236→/**
   237→ * Localstorage attempts to return the localstorage.
   238→ *
   239→ * This is necessary because safari throws
   240→ * when a user disables cookies/localstorage
   241→ * and you attempt to access it.
   242→ *
   243→ * @return {LocalStorage}
   244→ * @api private
   245→ */
   246→
   247→function localstorage() {
src/common.js
     2→/**
     3→ * This is the common logic for both the Node.js and web browser
     4→ * implementations of `debug()`.
     5→ */
     6→
     7→function setup(env) {
src/node.js
   151→/**
   152→ * Is stdout a TTY? Colored output is enabled when `true`.
   153→ */
   154→
   155→function useColors() {
   161→/**
   162→ * Adds ANSI color escape codes if enabled.
   163→ *
   164→ * @api public
   165→ */
   166→
   167→function formatArgs(args) {
   182→function getDate() {
   183→	if (exports.inspectOpts.hideDate) {
   184→		return '';
   185→	}
   186→	return new Date().toISOString() + ' ';
   187→}
   189→/**
   190→ * Invokes `util.formatWithOptions()` with the specified arguments and writes to stderr.
   191→ */
   192→
   193→function log(...args) {
   197→/**
   198→ * Save `namespaces`.
   199→ *
   200→ * @param {String} namespaces
   201→ * @api private
   202→ */
   203→function save(namespaces) {
   213→/**
   214→ * Load `namespaces`.
   215→ *
   216→ * @return {String} returns the previously persisted debug modes
   217→ * @api private
   218→ */
   219→
   220→function load() {
   224→/**
   225→ * Init logic for `debug` instances.
   226→ *
   227→ * Create a new `inspectOpts` object in case `useColors` is set
   228→ * differently for a particular `debug` instance.
   229→ */
   230→
   231→function init(debug) {
test.node.js
     8→const formatWithOptionsSpy = sinon.spy(util, 'formatWithOptions');
