tests/snapshots/snapshots__budget_debug_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 3 → level 0 (4 words)

browser.js
common.js
index.js
node.js
