tests/snapshots/snapshots__budget_debug_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 15 → level 0 (8 words)

README.md
karma.conf.js
src/browser.js
src/common.js
src/index.js
src/node.js
test.js
test.node.js
