tests/snapshots/snapshots__budget_debug_root_level2.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 200 → level 2 (125 words)

README.md
     1→# debug
    10→## Installation
    16→## Usage
    73→#### Windows command prompt notes
    75→##### CMD
    89→##### PowerShell (VS Code default)
   110→## Namespace Colors
   116→#### Node.js
   124→#### Web Browser
   134→## Millisecond diff
   145→## Conventions
   149→## Wildcards
   161→## Environment Variables
   181→## Formatters
   196→### Custom formatters
   215→## Browser Support
   248→## Output streams
   274→## Extend
   288→## Set dynamically
   341→## Checking whether a debug target is enabled
   357→## Usage in child processes
   379→## Authors
   386→## Backers
   422→## Sponsors
   457→## License
karma.conf.js
src/browser.js
   115→function useColors() {
   149→function formatArgs(args) {
   200→function save(namespaces) {
   219→function load() {
   247→function localstorage() {
src/common.js
     7→function setup(env) {
src/index.js
src/node.js
   155→function useColors() {
   167→function formatArgs(args) {
   182→function getDate() {
   193→function log(...args) {
   203→function save(namespaces) {
   220→function load() {
   231→function init(debug) {
test.js
test.node.js
     8→const formatWithOptionsSpy = sinon.spy(util, 'formatWithOptions');
